Table databases {
  id string [pk]
  name string
  definition string
  created_at datetime
  modified_at datetime
}

Table schemas {
  id string [pk]
  name string
  database_id string [ref: > databases.id]
  created_at datetime
  modified_at datetime
}

Table tables {
  id string [pk]
  name string
  schema_id string [ref: > schemas.id]
  created_at datetime
  modified_at datetime
}

Table columns {
  id string [pk]
  name string
  data_type string
  table_id string [ref: > tables.id]
  is_nullable string
  default_value string
  created_at datetime
  modified_at datetime
}

Table stored_procedures {
  id string [pk]
  name string
  schema_id string [ref: > schemas.id]
  definition string
  created_at datetime
  modified_at datetime
}

Table stored_procedure_parameters {
  id string [pk]
  name string
  data_type string
  stored_procedure_id string [ref: > stored_procedures.id]
  ordinal_position string
  is_output string
}

Table references {
  id string [pk]
  ref_type string
  ref_id string
  table_id string [ref: > tables.id]
  created_at datetime
}
